--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,4 +1,6 @@
 <android.support.v4.widget.DrawerLayout
+
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/drawer_layout"
@@ -9,8 +11,7 @@
     <!-- Main Content View -->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent">
 
     <!-- Navigation Drawer -->
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,6 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+    </FrameLayout>
     <ListView android:id="@+id/left_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
@@ -29,5 +38,8 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:background="#111"/>
+
+    <!-- For modifying specific drawer colors, like background, etc. look at colors.xml under res/values
+    -->
 
     </android.support.v4.widget.DrawerLayout>
