--- a/app/src/main/res/menu/tool_menu.xml
+++ b/app/src/main/res/menu/tool_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- THIS IS THE MENU FOR THE THREE DOT DROP DOWN IN THE TOP RIGHT CORNER OF MAPS_ACTIVITY -->
     <item android:id="@+id/my_location"
         android:title="Go to my Location"/>
     <item android:id="@+id/group_location"
