--- a/app/src/main/res/layout/nav_header_drawer.xml
+++ b/app/src/main/res/layout/nav_header_drawer.xml
@@ -13,13 +13,36 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <!-- TODO: GRAB USER IMAGE FROM FACEBOOK API AND INSERT HERE , MIGHT NEED MORE FORMATTING LATER ON -->
+
+    <!-- CARDVIEW CODE CREATES CIRCULAR BORDER AROUND PROFILE_PIC -->
+    <android.support.v7.widget.CardView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:elevation="12dp"
+        android:id="@+id/view2"
+        app:cardCornerRadius="40dp"
+        android:layout_centerHorizontal="true"
+        android:innerRadius="0dp"
+        android:shape="ring"
+        android:thicknessRatio="1.9">
+        <ImageView
+            android:layout_height="80dp"
+            android:layout_width="match_parent"
+            android:id="@+id/imageView"
+            android:src="@drawable/profile_pic"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
+        </ImageView>
+    </android.support.v7.widget.CardView>
+
+    <!--
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/profile_pic" />
-
+        app:srcCompat="@drawable/layer_list" />
+    -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
