--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,10 +8,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.dougjudice.uncharted.MapsActivity">
 
+
+
     <!-- Main Content View -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
 
     <!-- Navigation Drawer -->
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,7 +32,24 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:background="?attr/colorPrimary" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <!-- MAPS SEARCH + AUTOCOMPLETE -->
+            <fragment
+                android:id="@+id/place_autocomplete_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                />
+
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
     </FrameLayout>
 
     <android.support.design.widget.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
