--- a/app/src/main/res/layout/nav_header_drawer.xml
+++ b/app/src/main/res/layout/nav_header_drawer.xml
@@ -28,18 +28,17 @@
         <ImageView
             android:layout_height="80dp"
             android:layout_width="match_parent"
-            android:id="@+id/imageView"
-            android:src="@drawable/profile_pic"
+            android:id="@+id/profilePic"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
         </ImageView>
     </android.support.v7.widget.CardView>
 
     <TextView
+        android:id="@+id/name_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="HEADER"
         android:textColor="@android:color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
