--- a/app/src/main/res/layout/activity_craft.xml
+++ b/app/src/main/res/layout/activity_craft.xml
@@ -11,8 +11,16 @@
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary" />
 
-    <ListView
-        android:id="@+id/crafting_list"
+    <!-- android:stretchMode affects item gravity, TODO: get this centered -->
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 </LinearLayout>
