--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="white">#ffffff</color>
     <color name="transparent">#00000000</color>
     <color name="black_overlay">#66000000</color>
+
     <color name="rariumBlue">#08ffd6</color>
+    <color name="legendOrange">#F55A24</color>
+    <color name="commonGray">#8D8D8D</color>
 </resources>
