--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -18,18 +18,19 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/friend_list"
+            android:id="@+id/group_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/friend_fab"
-            android:src="@drawable/ic_menu_send"
+            android:src="@drawable/ic_add_black_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
-            app:layout_anchor="@id/friend_list"
+            app:backgroundTint="@color/rariumBlue"
+            app:layout_anchor="@id/group_list"
             app:layout_anchorGravity="bottom|right|end"/>
 
     </android.support.design.widget.CoordinatorLayout>
