--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="android:windowNoTitle">false</item>
     </style>
 
+    <style name = "AppTheme.CustomWindow">
+        <item name = "android:windowIsTranslucent">true</item>
+        <item name = "android:windowCloseOnTouchOutside">true</item>
+    </style>
+
     <!--
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
