--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -10,6 +10,15 @@
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary" />
 
+    <TextView
+        android:id="@+id/group_name"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:background="#08ffd6"
+        android:textColor="#000000"
+        android:text="HI"/>
+
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
