--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -11,8 +11,24 @@
         android:layout_height="wrap_content"
         android:text="POPUP" /> -->
 
-    <ListView
-        android:id="@+id/friend_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/friend_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/close_activity"/>
+
+        <Button
+            android:id="@+id/close_activity"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:text="Close"
+            android:gravity="center"/>
+        
+    </RelativeLayout>
+
 </LinearLayout>
