--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <!-- THIS FILE DEFINES HOW AN ITEM LOOKS WHEN VIEWED IN THE INVENTORY ACTIVITY -->
+    <!-- THIS FILE DEFINES HOW AN ITEM LOOKS WHEN VIEWED IN THE INVENTORY/GROUP/POPUP ACTIVITY -->
 
     <TableRow>
         <ImageView
@@ -13,7 +13,8 @@
         <TextView
             android:id="@+id/rsc_txt"
             android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:gravity="center_vertical"/>
 
     </TableRow>
 </TableLayout>
