--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,8 @@
             android:id="@+id/rsc_txt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:gravity="center_vertical"/>
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"/>
 
     </TableRow>
 </TableLayout>
