--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -28,6 +28,10 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/about_img"
                 android:title="About" />
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/about_img"
+                android:title="Logout" />
         </menu>
     </item>
 
