Re-integrated IntroActivity, set to not appear after first app activation

--- a/app/src/main/res/layout/view_custom_marker.xml
+++ b/app/src/main/res/layout/view_custom_marker.xml
@@ -23,7 +23,7 @@
         android:layout_centerHorizontal="true">
     </ImageView>
 
-    <!-- DEFINES LAYOUT FOR BUBBLE NEXT TO EACH MARKER IMAGE -->
+    <!-- DEFINES LAYOUT FOR BUBBLE NEXT TO EACH MARKER IMAGE TODO: Get rid of 6+ -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="20dp">
