--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,7 +11,7 @@
 
 
     <!-- Main Content View -->
-    <FrameLayout
+    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -73,6 +73,15 @@
                 android:background="#0008ffd6"
                 android:textColor="#00ffffff"
                 android:text="HI"/>
+
+        <ImageView
+            android:id="@+id/active_item_img"
+            android:src="@drawable/about_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|left"
+            android:layout_margin="16dp"
+            app:layout_anchorGravity="bottom|right|end"/>
 
     </FrameLayout>
 
