--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -22,15 +22,15 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/settings_img"
-                android:title="My Settings" />
+                android:icon="@drawable/leaderboard"
+                android:title="Leaderboards" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/about_img"
                 android:title="About" />
             <item
                 android:id="@+id/logout"
-                android:icon="@drawable/about_img"
+                android:icon="@drawable/logout"
                 android:title="Logout" />
         </menu>
     </item>
