--- a/app/src/main/res/layout/view_custom_marker.xml
+++ b/app/src/main/res/layout/view_custom_marker.xml
@@ -28,11 +28,10 @@
         android:layout_width="match_parent"
         android:layout_height="20dp">
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/miner_count"
             android:layout_width="26dp"
             android:layout_height="28dp"
             android:gravity="center"
-            android:text="6+"
             android:layout_alignParentBottom="true"
             android:background="@drawable/circle_txt_view"
             android:textColor="#000000"/>
